<resources>
    <string name="app_name">LastMinute</string>

    <!-- log in  -->
    <string name="app_full_name">LastMinute\nMarket</string>
    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="signup_email">이메일</string>
    <string name="signup_complete">완료</string>
    <string name="goto_signup">아직 회원이 아니신가요?</string>

    <!-- navigation  -->
    <string name="navigation_search">찾기</string>
    <string name="navigation_post">올리기</string>
    <string name="navigation_notification">알림</string>
    <string name="navigation_chat">채팅</string>
    <string name="navigation_mypage">내 정보</string>

    <!-- 상품 목록  -->
    <string name="paid_price">예약금</string>
    <string name="all_paid">즉시사용</string>
    <string name="booked">예약양도</string>

    <!--  검색창  -->
    <string name="search_hint">카테고리, 제품명으로 검색하세요</string>

    <!--  올리기 창  -->
    <string name="post_place">사용처</string>
    <string name="post_place_search">검색</string>
    <string name="post_place_input">사용처명을 입력해주세요.</string>
    <string name="post_place_hint">사용처를 검색해주세요.</string>
    <string name="post_menu">메뉴</string>
    <string name="post_menu_hint">상세 메뉴를 입력해주세요.</string>
    <string name="post_time">예약 시각</string>
    <string name="post_num_peoples">인원수</string>
    <string name="post_people_unit">명</string>
    <string name="post_require_extra_pay">추가결제 필요 여부</string>
    <string name="post_all_paid">바로 이용할 수 있어요</string>
    <string name="post_booked">추가 결제가 필요해요</string>
    <string name="post_paid">지불한 예약금</string>
    <string name="post_price">판매가격</string>
    <string name="post_additional">추가설명</string>
    <string name="post_today">오늘부터</string>
    <string name="post_since">부터</string>
    <string name="post_apply">등록하기</string>
    <string name="post_additional_hint">상품을 소개해주세요.</string>

    <!--  상세보기  -->
    <string name="post_writer">판매자</string>
    <string name="purchase">구매하기</string>능

    <!-- 구매내역  -->
    <string name="payment">결제</string>
    <string name="assignment">양도</string>
    <string name="complete">완료</string>
    <string name="purchase_complete">거래 완료</string>
    <string name="purchase_cancel">구매 철회</string>
    <string name="purchase_price">결제 금액</string>


    <!-- 채팅  -->


</resources>