<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="detail"
            type="com.lastminute.ui.model.ProductDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="13dp"
        android:paddingBottom="21dp"
        android:paddingHorizontal="20dp"
        tools:context=".purchase.PurchaseActivity">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_chevron_left"
            android:padding="9dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="9dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_three_dots_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:background="@drawable/ic_three_circle_blue"
            android:fontFamily="@font/notosans_kr_regular"
            android:gravity="center"
            android:text="@string/payment"
            android:textColor="@color/bg_light"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_double_right"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_double_right"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:tint="@color/gray" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:backgroundTint="@color/red"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_three_circle_red"
            android:fontFamily="@font/notosans_kr_regular"
            android:gravity="center"
            android:text="@string/assignment"
            android:textColor="@color/bg_light"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:background="@drawable/ic_three_circle_gray"
            android:fontFamily="@font/notosans_kr_regular"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/complete"
            android:textColor="@color/bg_light"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:text="@{detail.title}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="펀방탈출" />

            <TextView
                android:id="@+id/tv_product_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_product_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:menuString="@{detail.menu}"
                app:numPeople="@{detail.numPeoples}"
                tools:text="고장난모니터 (2인)" />

            <TextView
                android:id="@+id/tv_product_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="@{detail.address}"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_product_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_title"
                tools:text="서울특별시 동작구 흑석로9길 95" />

            <TextView
                android:id="@+id/tv_product_time_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/post_time"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_address" />

            <TextView
                android:id="@+id/tv_product_require_pay_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/post_require_extra_pay"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_time_prefix" />

            <ImageView
                android:id="@+id/iv_require_extra_pay_help"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_question_circle"
                app:layout_constraintBottom_toBottomOf="@+id/tv_product_require_pay_prefix"
                app:layout_constraintStart_toEndOf="@+id/tv_product_require_pay_prefix"
                app:layout_constraintTop_toTopOf="@+id/tv_product_require_pay_prefix" />

            <TextView
                android:id="@+id/tv_product_paid_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/post_paid"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_require_pay_prefix" />

            <TextView
                android:id="@+id/tv_product_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_product_time_prefix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_product_time_prefix"
                app:showLocalDateTime="@{detail.time}"
                tools:text="5월 19일 오후 6:30" />

            <TextView
                android:id="@+id/tv_product_require_extra_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="@{detail.allPaid ? @string/post_all_paid : @string/post_booked}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_product_require_pay_prefix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_product_require_pay_prefix"
                tools:text="즉시 사용 가능" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_product_paid_prefix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_product_paid_prefix"
                app:setPriceText="@{detail.paid}"
                app:showStrikeThrough="@{true}"
                tools:text="40,000원" />

            <TextView
                android:id="@+id/tv_product_price_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/purchase_price"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_paid_prefix" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_product_price_prefix"
                app:layout_constraintEnd_toEndOf="parent"
                app:setPriceText="@{detail.price}"
                tools:text="30,000원" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/gray_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_chat_celler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{detail.writer}"
            android:drawableLeft="@drawable/ic_chat"
            android:drawablePadding="7dp"
            android:fontFamily="@font/notosans_kr_regular"
            android:textSize="14sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:includeFontPadding="false"
            android:textColor="@color/bg_light"
            android:background="@drawable/rectangle_round_14"
            tools:text="흑석방탈러"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gray_line" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_purchase_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_round_14"
            android:backgroundTint="@color/iris_100"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:padding="10dp"
            android:text="@string/purchase_complete"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintEnd_toStartOf="@id/btn_purchase_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_purchase_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_round_14"
            android:backgroundTint="@color/mild_red"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:padding="10dp"
            android:text="@string/purchase_cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_purchase_complete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
